feat: adds account reservation usage timeseries to dataapi
