# disperser/dataapi/v2/server_v2.go
@@ -11,6 +11,7 @@ import (
 	"time"
 
 	"github.com/Layr-Labs/eigenda/core"
+	"github.com/Layr-Labs/eigenda/core/meterer"
 	corev2 "github.com/Layr-Labs/eigenda/core/v2"
 	commonv2 "github.com/Layr-Labs/eigenda/disperser/common/v2"
 	"github.com/Layr-Labs/eigenda/disperser/common/v2/blobstore"
@@ -89,6 +90,8 @@ type ServerV2 struct {
 	indexedChainState core.IndexedChainState
 	promClient        dataapi.PrometheusClient
 	metrics           *dataapi.Metrics
+	offchainStore     meterer.OffchainStore
+	onchainPayment    meterer.OnchainPayment
 
 	operatorHandler *dataapi.OperatorHandler
 	metricsHandler  *dataapi.MetricsHandler
@@ -116,6 +119,7 @@ func NewServerV2(
 	indexedChainState core.IndexedChainState,
 	logger logging.Logger,
 	metrics *dataapi.Metrics,
+	offchainStore meterer.OffchainStore,
 ) (*ServerV2, error) {
 	l := logger.With("component", "DataAPIServerV2")
 
@@ -186,6 +190,7 @@ func NewServerV2(
 		blobCertificateCache:             blobCertificateCache,
 		blobAttestationInfoResponseCache: blobAttestationInfoResponseCache,
 		batchResponseCache:               batchResponseCache,
+		offchainStore:                    offchainStore,
 	}, nil
 }
 
@@ -241,6 +246,7 @@ func (s *ServerV2) Start() error {
 		accounts := v2.Group("/accounts")
 		{
 			accounts.GET("/:account_id/blobs", s.FetchAccountBlobFeed)
+			accounts.GET("/:account_id/reservation/usage", s.FetchAccountReservationUsage)
 		}
 		operators := v2.Group("/operators")
 		{
